# aetherbound

./: .gitignore  CMakeLists.txt  README.md
cmake/: embed_resources.cmake
src/: game.h  inventory.cpp  inventory.h  item.cpp  item.h  main.cpp
